--- a/relogio.html
+++ b/relogio.html
@@ -26,16 +26,20 @@
     <!--Seção dos fusos temporáriamente-->
     <div id="PaiFuso" style="display: none; margin-top: 10px;">
         <div>
-            1
+            <nav>titulo</nav>
+            <div>hora,diferença</div>
         </div>
         <div>
-            2
+            <nav>titulo</nav>
+            <div>hora,diferença</div>
         </div>
         <div>
-            3
+            <nav>titulo</nav>
+            <div>hora,diferença</div>
         </div>
         <div>
-            4
+            <nav>titulo</nav>
+            <div>hora,diferença</div>
         </div>
     </div>
     <script src="relogio.js"></script>
