--- a/relogio.html
+++ b/relogio.html
@@ -25,22 +25,21 @@
     </div>
     <!--Seção dos fusos temporáriamente-->
     <div id="PaiFuso" style="display: none; margin-top: 10px;">
-        <div>
-            <nav>titulo</nav>
-            <div>hora,diferença</div>
+        <div class="Div-Filho">
+            <div class="titulos">
+                <span class="cidade">cidade</span>
+                <div class="trocar">trocar</div>
+            </div>
+            <div class="corpo">
+                <div class="horario">
+                    16
+                </div>
+                <div class="diferençaH">
+                    diferença
+                </div>
+            </div>
         </div>
-        <div>
-            <nav>titulo</nav>
-            <div>hora,diferença</div>
-        </div>
-        <div>
-            <nav>titulo</nav>
-            <div>hora,diferença</div>
-        </div>
-        <div>
-            <nav>titulo</nav>
-            <div>hora,diferença</div>
-        </div>
+    
     </div>
     <script src="relogio.js"></script>
 </body>
